[package]
name = "wry_macos_bug"
version = "0.1.0"
authors = ["David Lemarier <david@lemarier.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-winit = { version = "0.24", features = ["serde"] } 
wry = "0.6.2"