[package]
name = "wry_macos_bug"
version = "0.1.0"
authors = ["David Lemarier <david@lemarier.ca>"]
edition = "2018"

[[bin]]
name = "webview"
path = "src/main.rs"

[[bin]]
name = "window_only"
path = "src/window_only.rs"

[dependencies]
tauri-winit = { version = "0.24", features = ["serde"] } 
wry = "0.6.2"